Fix production deployment issues: service worker duplicate preloading, missing icons, font preload path, module polyfill

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="/fonts/samarkan.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/samarkan.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/src/index.css" as="style">
     <link rel="preload" href="/intro-video.mp4" as="video">
     
