FONT FIX: Optimize font loading to prevent page blocking - remove missing woff files, add preloads, move Google Fonts to HTML

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <!-- Preload Critical Resources -->
     <link rel="preload" href="/src/index.css" as="style">
     <link rel="preload" href="/intro-video.mp4" as="video">
+    <link rel="preload" href="/src/assets/fonts/samarkan.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=The+Seasons&display=swap" rel="stylesheet">
     
     <!-- Alternative Languages -->
     <link rel="alternate" hreflang="en" href="https://kalakritam.in/">
