--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Kalakritam">
     
+    <!-- Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google-analytics.com https://www.googletagmanager.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https:; media-src 'self' data: blob:; connect-src 'self' https://api.kalakritam.in https://www.google-analytics.com https://fonts.googleapis.com https://fonts.gstatic.com;">
+    
     <!-- Theme Colors -->
     <meta name="theme-color" content="#c38f21">
     <meta name="msapplication-TileColor" content="#c38f21">
